[package]
name = "xcm-simulator-fuzzer"
description = "Examples of xcm-simulator usage."
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.3.0" }
honggfuzz = "0.5.55"
arbitrary = "1.2.0"
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }

[features]
runtime-benchmarks = [
    "pallet-xcm/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

[[bin]]
path = "src/fuzz.rs"
name = "xcm-fuzzer"
